--- a/_posts/2016-12-3-FLL.md
+++ b/_posts/2016-12-3-FLL.md
@@ -4,4 +4,4 @@ title: FLL
 date: 2016-12-3
 ---
 
-So today I was competing at the FLL regionals for Peel, and at the moment it doesn't look to good. We really screwed up our practice runs, and at the moment I am really weird (weirder than usual, that is.). I will blog more later. Stay tuned!
+So today I was competing at the FLL regionals for Peel, and at the moment it doesn't look too good. We really screwed up our practice runs, and at the moment I am really weird (weirder than usual, that is.). I will blog more later. Stay tuned!
